--- a/page2.html
+++ b/page2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/estilo2.css">
 </head>
 <body>
     <h1>Bienvenido a la página 2</h1>
